<resources>

    <string name="i_have_attached_pdfs_to_this_message">I have attached file(s) to this message</string>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="pdf_type" translatable="false">application/pdf</string>
    <string name="txt_type" translatable="false">text/*</string>
    <string name="please_wait">Please Wait</string>
    <string name="bundleKey">ImageUri</string>
    <string name="whatsappToast">Sorry! Images could not be added. Please select the images from our **Select Images** option.</string>
    <string name="successToast">Images successfully added.</string>
    <string name="share_chooser">Select app to send message…</string>
    <string name="error_path_not_found">Sorry, we are unable to access the file at this location</string>
    <string name="open_file">Open File</string>
    <string name="error_open_file">An error occurred while opening the file. Please try reopening</string>
    <string name="pdf_suffix" translatable="false">_pdf</string>
    <string name="snackbar_no_pdf_app">No app to read PDF File</string>
    <string name="merge_file_select">Select a file</string>
    <string name="snackbar_pdfCreated">PDF created!</string>
    <string name="snackbar_viewAction">View</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="encrypted">Encrypted</string>
    <string name="not_encrypted">PDF is not Encrypted</string>
    <string name="master_password_changed">The password seems to be incorrect. May be, you have changed the master password.</string>
    <string name="decrypted_file">_unencrypted.pdf</string>
    <string name="decrypt_protected_file">Selected pdf is password protected. Enter the password to continue…</string>
    <string name="file_info">\n  File Name : %1$s \n\n  Path : %2$s \n\n  Size : %3$s \n\n  Date Modified %4$s</string>
    <string name="extract_images">Extract Images</string>
    <string name="extract_images_failed">We couldn\'t find any images in the selected PDF.</string>
    <string name="extract_images_success">We found %1$d image(s) in the selected PDF. They have been saved in the PDF Files folder in root directory.</string>
    <string name="warning">Warning</string>
    <string name="overwrite_message">There already exists a file with the same name. Do you want to overwrite?</string>

    <string name="viewfiles_rotatepages">1. Select the PDF you wish to rotate. \n2. Select Rotate Pages. \n3. Select angle of rotation. Select OK. \n4. New rotated PDF will be created.</string>
    <string name="viewfiles_addpassword">1. Select the PDF you wish to add password to. \n2. Select Add Password. \n3. Type new password. Select OK. \n4. New PDF with password be created.</string>
    <string name="viewfiles_removepassword">1. Select the PDF you wish to remove password from. \n2. Select Remove Password. \n3. Type PDF password. Select OK. \n4. New PDF without PDF will be created.</string>
    <string name="viewfiles_addwatermark">1. Select the PDF you wish to add watermark to. \n2. Select Add Watermark. \n3. Fill the required information. Select OK. \n4. New PDF with watermark will be created.</string>
    <string name="image_scale_type">Set Image Scale Type</string>
    <string name="stretch_image">Stretch image to fit on page</string>
    <string name="maintain_aspect_ratio">Maintain aspect ratio of images</string>
    <string name="set_as_default">Set as default</string>
    <string name="create_pdf">Create PDF</string>
    <string name="pdf_merged">PDFs Merged</string>
    <string name="file_access_error">We were unable to access PDF. Files may be encrypted or in the external storage.</string>
    <string name="split_success">The selected PDF was split successfully. It was split into %1$d PDF(s)</string>
    <string name="split_info">The PDF will be split into multiple PDFs.Format example: 1&#8211;5,6&#8211;7,8,9</string>

    <string name="prompt_input">Enter here</string>
    <string name="compress_pdf">Compress PDF</string>
    <string name="compress_pdf_prompt">Enter % compression of PDF : </string>
    <string name="compress_info">Congratulations! Your PDF is compressed: \n Original PDF Size : %s \n Compressed PDF Size: %s</string>

</resources>