<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CompressPdfActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/selectFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="24dp"
                android:maxWidth="30dp"
                android:fontFamily="@font/sarabunregular"
                style="@style/MorphingButton"
                android:text="@string/merge_file_select"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/infoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/sarabunregular"
                android:text="@string/compress_pdf_prompt" />

            <EditText
                android:labelFor="@id/infoText"
                android:id="@+id/pages"
                android:hint="@string/prompt_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/et_split_back"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/sarabunregular"
                android:inputType="number"
                android:autofillHints="" />

            <TextView
                android:id="@+id/compressionInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="24dp"
                android:visibility="gone"
                android:text="@string/compress_info" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorBlueLight"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:text="Save Location"
            android:layout_above="@+id/ll_compress_location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1"
            android:layout_above="@+id/ll_compress_bottom"
            android:id="@+id/ll_compress_location">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:id="@+id/tv_compress_folder"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".4"
                android:background="@drawable/btn_back_rounded"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:text="Choose"
                android:gravity="center"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="16dp"
                android:id="@+id/btn_compress_choose"/>

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_alignParentBottom="true"
           android:id="@+id/ll_compress_bottom">

           <com.dd.morphingbutton.MorphingButton
               android:id="@+id/pdfCreate"
               style="@style/MorphingButton"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="24dp"
               android:text="@string/create_pdf"
               android:fontFamily="@font/sarabunregular"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/textView" />

           <Button
               android:id="@+id/view_pdf"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="View PDF"
               android:fontFamily="@font/sarabunregular"
               android:layout_marginBottom="24dp"
               android:layout_marginLeft="24dp"
               android:layout_marginRight="24dp"
               android:visibility="gone"
               android:background="@color/mb_green"/>

       </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>